# Valengine

./: LICENCE-GPL  README  README.md  cross_file.txt  meson.build  meson_options.txt
src/lib/: 2DCamera.vala  Clipboard.vala  Color.vala  Constants.vala  Log.vala  Text.vala  Util.vala  Window.vala  meson.build
src/lib/Audio/: Music.vala  Sound.vala  Types.vala
src/lib/Automation/: EventList.vala
src/lib/Graphics/: Image.vala  SpriteSheet.vala  Texture2D.vala
src/lib/Input/: Gamepad.vala  Keyboard.vala  Mouse.vala  Touch.vala
src/lib/Shapes/: Circle.vala  Line.vala  Rectangle.vala  Vector2.vala
src/lib/examples/: meson.build  template.vala
src/lib/examples/core/: core_2d_camera.vala  core_basic_screen_manager.vala  core_basic_window.vala  vengine_main.vala
src/lib/examples/misc/: draw_line.vala
src/valengine/: CameraModeEnum.vala  CharacterBody.vala  ControlMapping.vala  EnemyBody.vala  Enviroment.vala  EnviromentItem.vala  EnvironmentItem.vala  Food.vala  MovementTypeEnum.vala  PlatformerBody.vala  PlayerActions.vala  PlayerBody.vala  SnakeBody.vala  TopDownBody.vala  World.vala  meson.build  snake.vala  vengine_oop.vala
src/valengine/examples/: meson.build  platformer.vala  pong.vala  snake.vala  texture_demo.vala  vengine_oop.vala
src/valengine/meta/: license.vala
subprojects/raylib/: meson.build
