valengine_src = [
	'src/lib/Shapes/Circle.vala',
	'src/lib/Shapes/Vector2.vala',
	'src/lib/Shapes/Rectangle.vala',
	'src/lib/Shapes/Line.vala',
	'src/lib/Window.vala',
	'src/lib/Color.vala',
	'src/lib/Util.vala',
	'src/lib/2DCamera.vala',
	'src/lib/Audio/Types.vala',
	'src/lib/Audio/Music.vala',
	'src/lib/Audio/Sound.vala',
	'src/lib/Input/Mouse.vala',
	'src/lib/Input/Keyboard.vala',
	'src/lib/Input/Gamepad.vala',
	'src/lib/Input/Touch.vala',
	'src/lib/Clipboard.vala',
	'src/lib/Log.vala',
	'src/lib/Automation/EventList.vala',
	'src/lib/Text.vala',
	'src/valengine/CameraModeEnum.vala',
	'src/valengine/MovementTypeEnum.vala',
	'src/valengine/CharacterBody.vala',
	'src/valengine/PlayerBody.vala',
	'src/valengine/PlatformerBody.vala',
	'src/valengine/Food.vala',
	'src/valengine/SnakeBody.vala',
]
