# Examples
if get_option('examples') == true
	executable(
		'core_basic_window',
		dependencies: [valengine_dep],
		sources: [
			'core/core_basic_window.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
	executable(
		'core_basic_screen_manager',
		dependencies: [valengine_dep],
		sources: [
			'core/core_basic_screen_manager.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
	executable(
		'template',
		dependencies: [valengine_dep],
		sources: [
			'template.vala',
		],
	)
	executable(
		'draw_line',
		dependencies: [valengine_dep],
		sources: [
			'misc/draw_line.vala',
		],
	)
	executable(
		'core_2d_camera',
		dependencies: [valengine_dep],
		sources: [
			'core/core_2d_camera.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
	executable(
		'vengine_main',
		dependencies: [valengine_dep],
		sources: [
			'core/vengine_main.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
		executable(
		'vengine_oop',
		dependencies: [valengine_dep],
		sources: [
			'core/vengine_oop.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)

endif 
