# Valengine executable
if get_option('valengine') == true
    executable(
        'valengine',
        dependencies: [valengine_dep],
        sources: [
            'vengine_oop.vala',
        ],
        install: true,
    )
endif

# SnakeGame executable
if get_option('valengine') == true
    executable(
        'snakegame',
        dependencies: [valengine_dep],
        sources: [
            'snake.vala',
        ],
        install: true,
    )
endif