# Valengine executable
if get_option('examples') == true
    executable(
        'examples',
        dependencies: [valengine_dep],
        sources: [
            'vengine_oop.vala',
        ],
        install: true,
    )
endif

# SnakeGame executable
if get_option('examples') == true
    executable(
        'snakegame',
        dependencies: [valengine_dep],
        sources: [
            'snake.vala',
        ],
        install: true,
    )
endif